@@ -4,6 +4,7 @@ import io.qameta.allure.jbehave5.AllureJbehave5;
 import org.jbehave.core.configuration.Configuration;
 import org.jbehave.core.configuration.MostUsefulConfiguration;
 import org.jbehave.core.io.LoadFromClasspath;
+import org.jbehave.core.io.StoryFinder;
 import org.jbehave.core.junit.JUnitStory;
 import org.jbehave.core.reporters.StoryReporterBuilder;
 import org.jbehave.core.steps.InjectableStepsFactory;
@@ -14,10 +15,15 @@ import java.util.List;
 import static org.jbehave.core.reporters.Format.*;
 
 public abstract class BaseTest extends JUnitStory {
+    protected String metaFilter = System.getProperty("meta.filter", "");
+    protected String includePath = System.getProperty("include.paths","**/*.story");
+    protected String excludePath = System.getProperty("exclude.paths","");
     public BaseTest() {
+
+        String[] metaFiltersArray = metaFilter.split(",");
         configuredEmbedder().embedderControls().doGenerateViewAfterStories(true).doIgnoreFailureInStories(true)
                 .doIgnoreFailureInView(true);
-        configuredEmbedder().useMetaFilters(Arrays.asList("-skip"));
+        configuredEmbedder().useMetaFilters(List.of(metaFiltersArray));
     }
     @Override
     public Configuration configuration() {
@@ -31,7 +37,18 @@ public abstract class BaseTest extends JUnitStory {
 
     @Override
     public abstract InjectableStepsFactory stepsFactory();
+    @Override
+    public List<String> storyPaths() {
 
+
+
+        // Sử dụng StoryFinder để tìm các file .story trong thư mục chỉ định
+        return new StoryFinder().findPaths(
+                "src/test/resources",   // Đường dẫn cơ bản từ classpath
+                includePath,         // Pattern để tìm file
+                excludePath                   // Loại trừ file (để trống nếu không cần)
+        );
+    }
 
 }
 
